--- a/style.css
+++ b/style.css
@@ -18,3 +18,15 @@ body {
   margin: 35px auto 20px;
   border-radius: 50%;
 }
+
+#userName {
+  color: rgb(236, 236, 236);
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.25;
+  display: block;
+  font-family: var(--font);
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+}
