--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ body {
 [hidden] {
   display: none !important;
 }
+
+#userPhoto {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin: 35px auto 20px;
+  border-radius: 50%;
+}
