--- a/style.css
+++ b/style.css
@@ -37,3 +37,19 @@ body {
   display: block;
   margin: 27px auto;
 }
+
+.link {
+  display: block;
+  background-color: #2443aa;
+  color: #fff;
+  font-family: var(--font);
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 17px;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition: all 0.25s cubic-bezier(0.08, 0.59, 0.29, 0.99);
+  border: solid #2443aa 2px;
+  border-radius: 25px;
+}
